feat : 대량 코드 수정
ChartFragment ToggleButton singleSelected 되도록 설정
ChartSetActivity Spinner 이벤트 추가
CreateActivity 이벤트 수정
PenalrtActivity 코드 간략화
SuccessActivity 동적으로 View 추가 되도록 설정

그 외 기타 코드 간략화

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.좋은하루">
-        <activity android:name=".ChartSetActivity"></activity>
+        <activity android:name=".ChartSetActivity" />
         <activity android:name=".PenaltyActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".SuccessActivity" />
